--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,13 @@ h11==0.14.0
 idna==3.10
 numpy==2.1.1
 pandas==2.2.3
+py4j==0.10.9.7
 pydantic==2.9.2
 pydantic_core==2.23.4
+pyodbc==5.1.0
+pyspark==3.5.3
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.2
 six==1.16.0
 sniffio==1.3.1
